...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/addMoreBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Add Another Offer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/compareBtn"
        app:layout_constraintStart_toStartOf="@id/compareBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/backToMainBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Go Back to Main Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/compareBtn"
        app:layout_constraintStart_toStartOf="@id/compareBtn"
...
